# features

./: Dockerfile  Makefile  README.md  cd.yml  pyproject.toml  pyrightconfig.json  setup_devenv.py
cd/: format-ruff.sh  gen-push-dags.sh  linting-ruff.sh  pyright-tests.sh  unit-tests.sh
doc/: deploy_to_stage.md  pipeline_from_scratch.ipynb  query_template_example.ipynb  update_existing_pipeline.ipynb
src/actions/: actions.py  utils.py
src/common/: environment.py  paths.py
src/configs/: README.md
src/configs/cleanup_sideload_tables/: cleanup_sideload_tables.yaml
src/configs/common/sql/: assert_partition_exists.sql.jinja2
src/configs/content_affinity/: content_affinity.yaml
src/configs/content_affinity/sql/: check_base_range_partitions.sql.jinja2  content_affinity.sql.jinja2  content_counts.sql.jinja2  content_subset_counts.sql.jinja2  gold_top_content_editorial.sql.jinja2  (+7 more)
src/configs/content_affinity_base/: content_affinity_base.yaml
src/configs/content_base/: content_base.yaml
src/configs/reactivation_features/: reactivation_features.yaml
src/configs/user_features/: restore_user_features.yaml  user_features_data_validation.yaml  user_features_v2.yaml
src/configs/user_visit_level_features/: user_visit_features.yaml
src/managed_table/: bootstrap.py  configs.py  utils.py
src/managed_table/domain/: commands.py  errors.py  events.py  value_objects.py
src/managed_table/entrypoints/: local.py
src/managed_table/services/: handlers.py  message_bus.py
src/pipelines/: adapters.py  pipeline.py  port.py  task.py  trigger.py  utils.py
src/pipelines/_internal/: graph.py  search.py
src/pipelines/compilers/: airflow.py  mermaid.py  yaml.py
src/query_constructor/: TEMPLATES.md  query_template.py  template_registry.py
src/query_constructor/templates/: all_time_aggregation_template.sql.jinja2  recursive_template.sql.jinja2  rolling_aggregation_template.sql.jinja2  static_aggregation_template.sql.jinja2
src/scripts/: check_configs.py  config.py  create_dag_files.py  settings.toml  update_readme.py  user_features_v1_dag.py  utils.py
tests/: conftest.py  test_setup_devenv.py
tests/actions/: test_actions.py  test_bq_utils.py
tests/configs/: conftest.py  test_create_dag_files.py
tests/managed_table/: conftest.py  helpers.py  test_entrypoint.py  test_handlers.py  test_message_bus.py  test_repositories.py  test_unity_catalog.py  test_utils.py
tests/pipelines/: conftest.py  pipelines_helpers.py  test_airflow.py  test_graph.py  test_mermaid.py  test_pipeline.py  test_pipeline_lib.py  test_search.py  test_yaml.py
tests/query_constructor/: test_query_registry.py  test_query_template.py
tests/query_constructor/recursive_template_mocks/: mock_recursive_task.yaml  mock_recursive_task_base_query.sql.jinja2
tests/scripts/: test_utils.py
(+44 files in other folders)
