[project]
name = "algo-features"
version = "3.0.0"
license = "Proprietary"
description = "An internal NBC package for supporting Data Science models and prototyping."
readme = "README.md"
repository = "https://github.com/NBCUDTC/src-algo-features"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
default-groups = ["managed-table-service", "pipelines", "pipelines-airflow", "actions-sdk", "common"]

[dependency-groups]
managed-table-service = [
    "google-api-core>=2.24.0",
    "google-cloud-bigquery>=3.27.0",
    "databricks-sdk>=0.19.0"
]
pipelines = [
    "networkx>=2.8.8",
]
pipelines-airflow = [
    "apache-airflow>=2.10.4",
    "apache-airflow-providers-cncf-kubernetes>=10.1.0",
    "apache-airflow-providers-google>=12.0.0",
    "apache-airflow-providers-slack>=9.0.0",
    "kubernetes>=31.0.0",
    "slack-sdk>=3.34.0",
]
actions-sdk = [
    "pandas>=2.1.4",
]
common = [
    "dynaconf>=3.2.6",
    "jinja2>=3.1.5",
]
dev = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-mock-generator>=1.2.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"                                                      # off, basic, strict
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "typings/", "tests/*"]

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true


# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "ERA", "PGH", "PL", "UP"]
ignore = ["Q", "ISC", "PLR2004", "E501", "E203"]
extend-select = ["Q004", "ISC003"]
extend-ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "COM812",
    "COM819",
]
fixable = ["A", "B", "C", "D", "E", "F", "I", "UP", "PL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["PLR6301"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true


[tool.pytest.ini_options]
markers = [
    "slow: tests with runtimes >1 sec",
    "network: Tests that require network access such as GCP or Airflow DAG",
    "integration: Tests that involve many modules or external services",
    "regression: Tests covering bug behavior",
    "e2e: Tests covering end to end behavior with infrastructure creation and teardown",
]
